--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "main": "index.ts",
   "license": "MIT",
+  "scripts": {
+    "start:dev": "npx ts-node src/index.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "ts-node": "^10.4.0",
