--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start:dev": "npx ts-node src/index.ts"
+    "start:dev": "nodemon --watch src/** --exec 'ts-node src/index.ts'"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.3",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^3.7.0",
     "@stoqey/ib": "^1.2.17",
-    "express": "^4.17.2"
+    "export-to-csv": "^0.2.1",
+    "express": "^4.17.2",
+    "pg": "^8.7.1",
+    "uuid": "^8.3.2"
   }
 }
