--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
+    "migrate:dev": "prisma migrate dev --name",
     "start:dev": "nodemon --watch src/** --exec 'ts-node src/index.ts'"
   },
   "devDependencies": {
