--- a/package.json
+++ b/package.json
@@ -1,25 +1,5 @@
 {
-  "name": "smartTrader",
-  "version": "0.0.0",
-  "main": "index.ts",
-  "license": "MIT",
-  "scripts": {
-    "migrate:dev": "prisma migrate dev --name",
-    "start:dev": "nodemon --watch src/** --exec 'ts-node src/index.ts'"
-  },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/uuid": "^8.3.3",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
-  },
-  "dependencies": {
-    "@prisma/client": "^3.7.0",
-    "@stoqey/ib": "^1.2.17",
-    "export-to-csv": "^0.2.1",
-    "express": "^4.17.2",
-    "pg": "^8.7.1",
-    "uuid": "^8.3.2"
+    "prettier": "^2.5.1"
   }
 }
