--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "start:dev": "nodemon --watch src/** --exec 'ts-node src/index.ts'"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/uuid": "^8.3.3",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^3.7.0",
     "@stoqey/ib": "^1.2.17",
+    "cors": "^2.8.5",
     "export-to-csv": "^0.2.1",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
