Add format script

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "prettier": "^2.5.1"
+  },
+  "scripts": {
+    "format:server": "prettier --write server/**/*.ts*"
   }
 }
