--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "export-to-csv": "^0.2.1",
     "express": "^4.17.2",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "uuid": "^8.3.2"
