--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "smartTrader",
-  "version": "0.0.0",
+  "name": "server",
+  "version": "0.0.1",
   "main": "index.ts",
   "license": "MIT",
   "private": true,
   "scripts": {
     "prisma:migrate:dev": "npx prisma migrate dev --name",
     "prisma:studio": "prisma studio",
-    "start:dev": "nodemon --watch src/** --exec 'ts-node src/index.ts'"
+    "start:dev": "nodemon --watch src --exec 'ts-node src/index.ts'"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
