--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,19 @@
   "scripts": {
     "prisma:migrate:dev": "npx prisma migrate dev --name",
     "prisma:studio": "prisma studio",
-    "start:dev": "nodemon --watch src --exec 'ts-node src/index.ts'"
+    "start:dev": "nodemon --watch src --exec 'ts-node src/index.ts'",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
     "@types/uuid": "^8.3.3",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
