--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
     "noImplicitAny": true,
   },
