--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -6,5 +6,8 @@
     "declarationMap": true,
     "outDir": "./dist",
     "composite": true
-  }
+  },
+  "references": [
+    {"path": "../server/node_modules/.prisma/client"}
+  ]
 }
