--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
+    "@types/memory-cache": "^0.2.2",
     "@types/morgan": "^1.9.3",
     "@types/uuid": "^8.3.3",
     "jest": "^27.5.1",
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "export-to-csv": "^0.2.1",
     "express": "^4.17.2",
+    "memory-cache": "^0.2.0",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
