--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prisma:migrate:dev": "npx prisma migrate dev --name",
     "prisma:studio": "prisma studio",
-    "start:dev": "nodemon --watch src --exec 'ts-node src/index.ts'",
+    "start:dev": "nodemon --watch src -e ts,tsx --exec 'ts-node src/index.ts'",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -17,6 +17,7 @@
     "@types/jest": "^27.4.1",
     "@types/memory-cache": "^0.2.2",
     "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.21",
     "@types/uuid": "^8.3.3",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
@@ -34,6 +35,7 @@
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
+    "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
   }
 }
