--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.26.0",
+    "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
