Add common interfaces

--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -8,6 +8,7 @@
     "composite": true
   },
   "references": [
-    {"path": "../server/node_modules/.prisma/client"}
+    {"path": "../server/node_modules/.prisma/client"},
+    {"path": "../server/node_modules/@stoqey/ib"}
   ]
 }
