--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "prisma:migrate:dev": "npx prisma migrate dev --name",
     "prisma:studio": "prisma studio",
+    "start": "ts-node src/index.ts",
     "start:dev": "nodemon --watch src -e ts,tsx --exec 'ts-node src/index.ts'",
     "test": "jest",
     "test:watch": "jest --watch"
