--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.26.0",
     "chart.js": "^3.7.1",
+    "chartjs-chart-financial": "^0.1.1",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-stockcharts": "^0.7.8",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
