--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,10 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "@types/uuid": "^8.3.3",
+    "chalk": "^5.0.1",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "puppeteer": "^13.5.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
