--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "db:dump": "pg_dump smarttraderdev > db_dump.sql",
     "db:seed": "psql < db_dump.sql",
+    "db:setup": "npx prisma migrate dev",
     "prisma:migrate:dev": "npx prisma migrate dev --name",
     "prisma:studio": "prisma studio",
     "start": "ts-node src/index.ts",
